# project-page-download

./: .gitignore  README.md  pyproject.toml
project/: __init__.py  settings.py
project/apps/page_to_pdf/: admin.py  apps.py  models.py  services.py  tasks.py  views.py
project/apps/page_to_pdf/migrations/: 0001_initial.py
project/jobs/: celery.py
