[project]
name = "project-page-download"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django==5.2",
    "django-rest-framework>=0.1.0",
    "playwright>=1.56.0",
    "pymupdf>=1.26.6",
    "pytest-playwright>=0.7.2",
]
