[project]
name = "project-page-download"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.5.3",
    "django==5.2",
    "django-celery-results>=2.6.0",
    "django-rest-framework>=0.1.0",
    "playwright>=1.56.0",
    "pymupdf>=1.26.6",
    "pytest-playwright>=0.7.2",
]
